2011-12-08  Elliot Poger  <epoger@google.com>

        Chromium DEPS roll 112974 -> 113603
        https://bugs.webkit.org/show_bug.cgi?id=74105

        Reviewed by Adam Barth.

        * DEPS:

2011-12-08  Tony Chang  <tony@chromium.org>

        [chromium] remove headers from WebKit.gyp that moved into WebKit/chromium/public/platform
        https://bugs.webkit.org/show_bug.cgi?id=74106

        Reviewed by Darin Fisher.

        * WebKit.gyp:

2011-12-08  Peter Beverloo  <peter@chromium.org>

        [Chromium] Exclude the four RenderTableCellDeathTest death tests for Android
        https://bugs.webkit.org/show_bug.cgi?id=73997

        The ASSERT_DEATH macro is not yet available in Google Test when
        building for Android, which causes compilation errors. This code
        will be removed once support lands in the GTest version Chromium
        uses. See https://bugs.webkit.org/show_bug.cgi?id=74089.

        Reviewed by Julien Chaffraix.

        * tests/RenderTableCellTest.cpp:

2011-12-08  Joshua Bell  <jsbell@chromium.org>

        IndexedDB: WebKit API addition of IDBObjectStore.count() and IDBIndex.count()
        https://bugs.webkit.org/show_bug.cgi?id=73685

        Reviewed by Darin Fisher.

        Implementation to follow - this just extends the WebKit API.

        * public/WebIDBIndex.h:
        (WebKit::WebIDBIndex::count):
        * public/WebIDBObjectStore.h:
        (WebKit::WebIDBObjectStore::count):

2011-12-07  Alexandre Elias  <aelias@google.com>

        [chromium] Add page-scale animation support to Impl thread
        https://bugs.webkit.org/show_bug.cgi?id=72996

        Reviewed by James Robinson.

        This adds a new math helper class to compute the progress of the
        animation, and code in the CCLayerTreeHostImpl to apply the animation
        frame by frame.

        No new tests. (https://bugs.webkit.org/show_bug.cgi?id=71529 filed.)

        * public/WebCompositor.h:
        * public/WebInputEvent.h: